[FEAT]: main -> login 화면 이동 설정

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -19,6 +19,7 @@
       </div>
       <div>
         <button type="submit">로그인</button>
+        <button type="button">회원가입</button>
       </div>
       <div id="info"></div>
     </form>
