--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,13 +8,17 @@
   </head>
   <body>
     <header>
-      <div class="header-wrapper">
+      <div id="header-wrapper" class="header-wrapper">
         <div class="menu-bar">The Word Search</div>
-        <div>
-          <button class="menu-bar__maker">Word Search Maker</button>
-          <button class="menu-bar__more">More Puzzles</button>
-          <button class="menu-bar__search">Search</button>
-        </div>
+        <button class="menu-bar__maker">Word Search Maker</button>
+        <div class="menu-bar__line"></div>
+        <button class="menu-bar__more">More Puzzles</button>
+        <div class="menu-bar__line"></div>
+        <button class="menu-bar__search">Search</button>
+        <div class="menu-bar__line"></div>
+        <button class="menu-bar__login" id="menu-bar__login">
+          <img src="/assets/user.svg" />
+        </button>
       </div>
     </header>
     <main>
@@ -28,5 +32,6 @@
         <div>1</div>
       </div>
     </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
