[FIX]: main login 이미지 안 나오는 현상 해결

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,11 @@
         <button class="menu-bar__search">Search</button>
         <div class="menu-bar__line"></div>
         <button class="menu-bar__login" id="menu-bar__login">
-          <img src="/assets/user.svg" />
+          <img
+            class="menu-bar__login-img"
+            src="/assets/user.svg"
+            style="width: 25px"
+          />
         </button>
       </div>
     </header>
