[FEAT]: 홈 화면 닉네임 나오도록 설정

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
         <button class="menu-bar__search">Search</button>
         <div class="menu-bar__line"></div>
         <button class="menu-bar__login" id="menu-bar__login">
+          <div id="info">로그인해주세요.</div>
           <img
             class="menu-bar__login-img"
             src="/assets/user.svg"
