--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/login/style.css" />
   </head>
   <body>
-    <form id="login-form" action="/login" method="POST">
+    <form id="login-form" action="/signup" method="POST">
       <div class="login-form__header">회원가입</div>
       <div class="login-form__id">
         <label class="login-form__label" for="id">아이디</label>
@@ -18,8 +18,8 @@
         <input type="password" id="password" name="password" required />
       </div>
       <div>
-        <label class="login-form__label" for="password">패스워드</label>
-        <input type="password" id="password" name="password" required />
+        <label class="login-form__label" for="password2">패스워드 확인</label>
+        <input type="password" id="password2" name="password2" required />
       </div>
       <div class="btn-wrapper">
         <button type="submit">회원가입</button>
